@@ -7,6 +7,7 @@
     <setting id="prepend_channel_numbers" label="30107" type="bool" default="false"/>
     <setting id="use_episode_number_as_title" label="30112" type="bool" default="false"/>
     <setting id="use_backend_genre_strings" label="30117" type="bool" default="false"/>
+    <setting id="show_drm_protected_channels" label="30118" type="bool" default="false"/>
     <setting id="delete_datetime_rules_after" label="30108" type="enum" lvalues="30213|30209|30210|30211|30212" default="3"/>
   </category>
   
