@@ -1,5 +1,6 @@
 v1.2.5 (2017.12.xx)
   - Add "Use backend genre string(s) in Electronic Program Guide (EPG)" setting
+  - Add "Show DRM protected channels in channel lineups" setting
 
 v1.2.4 (2017.11.24)
   - Fix bug preventing background discovery task scheduler from stopping properly
